deployment/manifests/prod/ingress-custom.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: employees
  namespace: employees-$CI_ENVIRONMENT_SLUG
  labels:
    app: employees
  # annotations:
  #   nginx.ingress.kubernetes.io/auth-type: basic
  #   nginx.ingress.kubernetes.io/auth-secret: basic-auth
  #   nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  #   service.beta.kubernetes.io/aws-load-balancer-ssl-cert:
  #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
  #   service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
  spec:
    tls:
      - secretName: employees-prod
        hosts:
          - prod.k8s.moaaznoaman.com
